# snake-bake

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.MD  cookiecutter.json
.github/: CONTRIBUTING.md  SECURITY.md  config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-failing-test.md  3-docs-bug.md  4-feature-request.md  5-enhancement-request.md  6-security-report.md  7-question-support.md
{{cookiecutter.cli_name}}/: .pre-commit-config.yaml  LICENSE.txt  pyproject.toml
{{cookiecutter.cli_name}}/.github/: CODE_OF_CONDUCT.md  SECURITY.md  settings.yml
{{cookiecutter.cli_name}}/.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-failing-test.md  5-enhancement-request.md  7-question-support.md  config.yml
{{cookiecutter.cli_name}}/src/{{cookiecutter.cli_name}}/: entry_points.py  example.py
{{cookiecutter.cli_name}}/tests/: __init__.py  greeting_test.py
{{cookiecutter.source_directory_name}}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.source_directory_name}}/.github/: CODEOWNERS  ISSUE_TEMPLATE.md  python-workflow.yml
{{cookiecutter.source_directory_name}}/.github/ISSUE_TEMPLATE/: 3-docs-bug.md  4-feature-request.md  6-security-report.md
{{cookiecutter.source_directory_name}}/src/{{cookiecutter.cli_name}}/: __about__.py  __main__.py  entry_points.py
{{cookiecutter.source_directory_name}}/tests/: greeting_test.py
